2005-11-19  Chong Yidong  <cyd@stupidchicken.com>

	* longlines.el (longlines-before-revert-hook)
	(longlines-after-revert-hook): New functions.
	(longlines-mode): Turn off longlines temporarily when reverting.

2005-11-19  Andreas Schwab  <schwab@suse.de>

	* emacs-lisp/shadow.el: Handle compressed files.

2005-11-19  Romain Francoise  <romain@orebokech.com>

	* net/browse-url.el (browse-url-default-browser): Signal an error
	if no usable browser can be found, rather than try to load w3.

2005-11-16  Ryan Yeske  <rcyeske@gmail.com>

	* net/rcirc.el (rcirc-mangle-text): Add bold face property without
	replacing existing properties.
	(rcirc-my-nick, rcirc-other-nick, rcirc-server)
	(rcirc-nick-in-message, rcirc-prompt): Use min-colors and remove
	tty specs.
	(rcirc-server-prefix, rcirc-server): New faces.
	(rcirc-url-regexp): Generate with rx macro.
	(rcirc-last-server-message-time): New variable.
	(rcirc-filter): Record time of last message.
	(rcirc-keepalive): Kill processes that did not send a message
	since the last ping.
	(rcirc-mode): Give rcirc-topic a local binding here.

2005-11-19  Michael Cadilhac  <michael.cadilhac@lrde.org>  (tiny change)

	* subr.el (read-passwd): Fontify the prompt as we do with other
	prompts.

2005-11-19  Ryan Yeske  <rcyeske@gmail.com>

	* ffap.el (ffap-menu-rescan): Use inhibit-read-only instead of
	binding buffer-read-only to nil.

2005-11-19  Eli Zaretskii  <eliz@gnu.org>

	* complete.el (partial-completion-mode): Mention
	completion-auto-help in the doc string.

	* man.el (Man-highlight-references): Doc fix.  Reformat code in a
	more Lisp-ish way.

2005-11-19  Slawomir Nowaczyk  <slawomir.nowaczyk.847@student.lu.se> (tiny change)

	* ls-lisp.el (ls-lisp-format-file-size): Format file size with 9
	digits, not 8, to avoid misalignment for files larger than 100MB.

2005-11-19  Eli Zaretskii  <eliz@gnu.org>

	* menu-bar.el (menu-bar-describe-menu) <list-keybindings>: Mention
	"keyboard shortcuts" in the help text.
